deploy: c4ede653be8eeb1c018b86114dbb02c3c56d608c

--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -103,6 +103,7 @@ window.onload = wrap_img;
   <div class="post-content e-content" itemprop="articleBody">
     <ul id="toc" class="section-nav">
 <li class="toc-entry toc-h2"><a href="#home-page-nikhil">Home Page (Nikhil)</a></li>
+<li class="toc-entry toc-h2"><a href="#workout-log-page-sri">Workout Log Page (Sri)</a></li>
 <li class="toc-entry toc-h2"><a href="#workouts-plan-lydia">Workouts Plan (Lydia)</a></li>
 <li class="toc-entry toc-h2"><a href="#ispe-page-alexa">ISPE page (Alexa)</a></li>
 <li class="toc-entry toc-h2"><a href="#what-is-ispe">What is ISPE?</a></li>
@@ -110,6 +111,7 @@ window.onload = wrap_img;
 <li class="toc-entry toc-h2"><a href="#our-challenges-ava">Our Challenges (Ava)</a></li>
 <li class="toc-entry toc-h2"><a href="#admin-vs-user-access-alexa">Admin vs User Access (Alexa)</a></li>
 <li class="toc-entry toc-h2"><a href="#scrum-board-lydia">Scrum Board (Lydia)</a></li>
+<li class="toc-entry toc-h2"><a href="#our-agile-manifesto-sri">Our Agile Manifesto (sri)</a></li>
 <li class="toc-entry toc-h2"><a href="#goaltimeline">Goal/Timeline</a></li>
 </ul><p><img src="/TeamBaddies/images/welcome.png" alt="Welcome Image"></p>
 
@@ -117,10 +119,10 @@ window.onload = wrap_img;
 <a class="anchor" href="#home-page-nikhil" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page (Nikhil)</h2>
 <p><img src="/TeamBaddies/images/homepage.jpg" alt="home page"></p>
 
+<h2 id="workout-log-page-sri">
+<a class="anchor" href="#workout-log-page-sri" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workout Log Page (Sri)</h2>
+<p><img src="/TeamBaddies/images/workoutlogfrontend.jpg" alt="Workout Log"></p>
 <ul>
-  <li>workout log page (Sri)
-<img src="/TeamBaddies/images/workoutlogfrontend.jpg" alt="Workout Log">
-</li>
   <li>This is a workout log where you can record your workouts and keep track of your fitness. This way, you can stay organized and maintain motivation to work towards a healthy lifestyle.</li>
   <li>Has an input</li>
   <li>Has a table at the bottom</li>
@@ -129,7 +131,13 @@ window.onload = wrap_img;
 
 <h2 id="workouts-plan-lydia">
 <a class="anchor" href="#workouts-plan-lydia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workouts Plan (Lydia)</h2>
-<p>add image</p>
+<p><img src="/TeamBaddies/images/WorkoutInput.png" alt="Workout Plans"></p>
+
+<ul>
+  <li>This page is where you can find workout sets and plans for different kinds of sports- all of which are inputted by different users</li>
+  <li>Different categories to let people know which sport the plan benefits, what exercise, and how much time and reps</li>
+  <li>It allows for an organized way for people to share their ideas and workouts with other users on our site</li>
+</ul>
 
 <h2 id="ispe-page-alexa">
 <a class="anchor" href="#ispe-page-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISPE page (Alexa)</h2>
@@ -200,8 +208,17 @@ window.onload = wrap_img;
 <h2 id="scrum-board-lydia">
 <a class="anchor" href="#scrum-board-lydia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scrum Board (Lydia)</h2>
 
-<p>## Our Agile Manifesto (sri)
-<img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto"></p>
+<p><img src="/TeamBaddies/images/ScrumBoardPresentation.png" alt="Scrum Board"></p>
+
+<ul>
+  <li>This Scrum Board highlights and organizes our teams To Do List, our works “In Progress,” and tasks we’ve completed</li>
+  <li>We use this Scrum Board (+ issues within our scrum board) to keep track of the tasks, as well as communicate with team members as to what needs to be accomplished.</li>
+  <li>Allows for our project to be well planned and organized</li>
+</ul>
+
+<h2 id="our-agile-manifesto-sri">
+<a class="anchor" href="#our-agile-manifesto-sri" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our Agile Manifesto (sri)</h2>
+<p><img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto"></p>
 
 <h2 id="goaltimeline">
 <a class="anchor" href="#goaltimeline" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal/Timeline</h2>
