--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -104,162 +104,202 @@ window.onload = wrap_img;
     <ul id="toc" class="section-nav">
 <li class="toc-entry toc-h2"><a href="#home-page-nikhil">Home Page (Nikhil)</a>
 <ul>
-<li class="toc-entry toc-h3"><a href="#-future-challenges-"> Future Challenges </a></li>
+<li class="toc-entry toc-h3"><a href="#future-challenges">Future Challenges</a></li>
 </ul>
 </li>
-</ul><body>
-<p><img src="/TeamBaddies/images/welcome.png" alt="Welcome Image"></p>
+<li class="toc-entry toc-h2"><a href="#workout-log-page-sri">Workout Log Page (Sri)</a></li>
+<li class="toc-entry toc-h2"><a href="#workouts-plan-lydia">Workouts Plan (Lydia)</a></li>
+<li class="toc-entry toc-h2"><a href="#ispe-page-alexa">ISPE page (Alexa)</a></li>
+<li class="toc-entry toc-h2"><a href="#what-is-ispe">What is ISPE?</a></li>
+<li class="toc-entry toc-h2"><a href="#inspiration-page-ava">Inspiration Page (Ava)</a></li>
+<li class="toc-entry toc-h2"><a href="#our-challenges-ava">Our Challenges (Ava)</a></li>
+<li class="toc-entry toc-h2"><a href="#admin-vs-user-access-alexa">Admin vs User Access (Alexa)</a></li>
+<li class="toc-entry toc-h2"><a href="#scrum-board-lydia">Scrum Board (Lydia)</a></li>
+<li class="toc-entry toc-h2"><a href="#our-agile-manifesto-sri">Our Agile Manifesto (sri)</a></li>
+<li class="toc-entry toc-h2"><a href="#incorporating-crud">Incorporating CRUD</a></li>
+</ul><p><img src="/TeamBaddies/images/welcome.png" alt="Welcome Image"></p>
 
 <h2 id="home-page-nikhil">
 <a class="anchor" href="#home-page-nikhil" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page (Nikhil)</h2>
+<blockquote>
+  <p>This page serves as a place to log in and to know more about our overall website and what it is about.</p>
+</blockquote>
 
-<p>This page serves as a place to log in and to know more about our overall website and what it is about. </p>
+<p><img width="915" alt="Screenshot 2023-01-25 at 10 45 16 PM" src="https://user-images.githubusercontent.com/111464993/214773981-17a1b8e2-3e8f-46d4-b686-3a29ee50dbd1.png"></p>
 
-<img width="915" alt="Screenshot 2023-01-25 at 10 45 16 PM" src="https://user-images.githubusercontent.com/111464993/214773981-17a1b8e2-3e8f-46d4-b686-3a29ee50dbd1.png">
+<p><br>
+<br>
+<br>
+<br></p>
 
-<br>
-<br>
-<br>
-<br>
+<p>We have a link that connects to healthline.org and displays the benefits of exercising regularly. We also have displayed what our website includes, such as the ISPE, Sports workout, and Workout Log and what they are. 
+<img width="1118" alt="Screenshot 2023-01-25 at 10 46 13 PM" src="https://user-images.githubusercontent.com/111464993/214774041-35bf6986-df46-482a-9e18-4100a299a7cc.png"></p>
 
+<p><br>
+<br>
+<br>
+<br></p>
 
-<p> We have a link that connects to healthline.org and displays the benefits of exercising regularly. We also have displayed what our website includes, such as the ISPE, Sports workout, and Workout Log and what they are.  </p>
-<img width="1118" alt="Screenshot 2023-01-25 at 10 46 13 PM" src="https://user-images.githubusercontent.com/111464993/214774041-35bf6986-df46-482a-9e18-4100a299a7cc.png">
+<p>At the very bottom we have a login Burron where we press it and it redirects you to the login Page.
+<img width="1229" alt="Screenshot 2023-01-25 at 10 46 33 PM" src="https://user-images.githubusercontent.com/111464993/214774818-108c02a0-3511-470d-aa26-803a1b809aa3.png"></p>
 
+<p><br>
 <br>
 <br>
-<br>
-<br>
+<br></p>
 
-
-<p> At the very bottom we have a login Burron where we press it and it redirects you to the login Page. </p>
-<img width="1229" alt="Screenshot 2023-01-25 at 10 46 33 PM" src="https://user-images.githubusercontent.com/111464993/214774818-108c02a0-3511-470d-aa26-803a1b809aa3.png">
-
-<br>
-<br>
-<br>
-<br>
-
-
-<p> Here we have a login page that we have designed using HTML and CSS. The login portion asks the user to input their User ID or username and password and there is a checkbox to remember the username and password so the user does not have to re-enter it the next time they come into the website, so far this is just the styling.  We also have an option as you can see in grey where you can continue as a guest which will redirect you back to the website for normal use. </p>
+<p>Here we have a login page that we have designed using HTML and CSS. The login portion asks the user to input their User ID or username and password and there is a checkbox to remember the username and password so the user does not have to re-enter it the next time they come into the website, so far this is just the styling.  We also have an option as you can see in grey where you can continue as a guest which will redirect you back to the website for normal use.
 <img width="1223" alt="Screenshot 2023-01-25 at 10 47 13 PM" src="https://user-images.githubusercontent.com/111464993/214774973-45638940-3c11-45c8-a2cf-23b0b7880bd8.png">
 <br>
 <br>
-<p> The registration portion asks you to enter a username of your choice, your email, and a password of your making, and then it asks you to accept the terms and conditions, we have not created the terms and conditions yet. 
-<img width="1153" alt="Screenshot 2023-01-25 at 10 47 19 PM" src="https://user-images.githubusercontent.com/111464993/214774977-f1f1aab8-4b1e-4f90-b61c-c5624e6838ad.png">
+The registration portion asks you to enter a username of your choice, your email, and a password of your making, and then it asks you to accept the terms and conditions, we have not created the terms and conditions yet. 
+<img width="1153" alt="Screenshot 2023-01-25 at 10 47 19 PM" src="https://user-images.githubusercontent.com/111464993/214774977-f1f1aab8-4b1e-4f90-b61c-c5624e6838ad.png"></p>
 
-<br>
-<br>
+<p><br>
+<br></p>
 
-</p>
-<h3>
-<a class="anchor" href="#-future-challenges-" aria-hidden="true"><span class="octicon octicon-link"></span></a> Future Challenges </h3>
-* One big challenge is trying to connect the Backend to the Front End for the Login page, where the computer has to store all the login information from the registration page. 
+<h3 id="future-challenges">
+<a class="anchor" href="#future-challenges" aria-hidden="true"><span class="octicon octicon-link"></span></a>Future Challenges</h3>
+<ul>
+  <li>One big challenge is trying to connect the Backend to the Front End for the Login page, where the computer has to store all the login information from the registration page.</li>
+</ul>
 
-<br>
-<br>
+<p><br>
+<br></p>
 
-&lt;/body&gt;
+<h2 id="workout-log-page-sri">
+<a class="anchor" href="#workout-log-page-sri" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workout Log Page (Sri)</h2>
+<p><img src="/TeamBaddies/images/workoutlogtable.jpg" alt="Workout Log"></p>
+<ul>
+  <li>This is a workout log where you can record your workouts and keep track of your fitness. This way, you can stay organized and maintain motivation to work towards a healthy lifestyle.</li>
+  <li>Has an input</li>
+  <li>Has a table at the bottom</li>
+  <li>Once you click submit button, it should add onto the table at the bottom (connection between frontend and backend)</li>
+</ul>
 
-## Workout Log Page (Sri)
-![Workout Log](/TeamBaddies/images/workoutlogfrontend.jpg)
-- This is a workout log where you can record your workouts and keep track of your fitness. This way, you can stay organized and maintain motivation to work towards a healthy lifestyle.
-- Has an input
-- Has a table at the bottom
-- Once you click submit button, it should add onto the table at the bottom (connection between frontend and backend)
+<p><br>
+<br></p>
 
-<br>
-<br>
+<h2 id="workouts-plan-lydia">
+<a class="anchor" href="#workouts-plan-lydia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workouts Plan (Lydia)</h2>
+<p><img src="/TeamBaddies/images/WorkoutInput.png" alt="Workout Plans"></p>
 
-## Workouts Plan (Lydia)
-![Workout Plans](/TeamBaddies/images/WorkoutInput.png)
+<ul>
+  <li>This page is where you can find workout sets and plans for different kinds of sports- all of which are inputted by different users</li>
+  <li>Different categories to let people know which sport the plan benefits, what exercise, and how much time and reps</li>
+  <li>It allows for an organized way for people to share their ideas and workouts with other users on our site</li>
+</ul>
 
-- This page is where you can find workout sets and plans for different kinds of sports- all of which are inputted by different users
-- Different categories to let people know which sport the plan benefits, what exercise, and how much time and reps
-- It allows for an organized way for people to share their ideas and workouts with other users on our site
+<p><br>
+<br></p>
 
-<br>
-<br>
+<h2 id="ispe-page-alexa">
+<a class="anchor" href="#ispe-page-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISPE page (Alexa)</h2>
+<p><img src="/TeamBaddies/images/ISPEgrades.jpg" alt="ISPE"></p>
+<h2 id="what-is-ispe">
+<a class="anchor" href="#what-is-ispe" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is ISPE?</h2>
+<p><strong>I</strong>ndependent <br>
+<strong>S</strong>port <br>
+<strong>P</strong>hysical <br>
+<strong>E</strong>ducation <br></p>
 
-## ISPE page (Alexa)
-![ISPE](/TeamBaddies/images/ISPEgrades.jpg)
-## What is ISPE?
-**I**ndependent <br>
-**S**port <br>
-**P**hysical <br>
-**E**ducation <br>
+<ul>
+  <li>ISPE is a program for kids who are in individual sports and practice for 15+ hours a week and want middle/highschool credit for the PE (without taking the actual class)</li>
+  <li>This page allows students to keep track of the workouts they do for school and the grades they recieve.</li>
+  <li>It keeps students organized, motivated, and on track to get credit for the class.</li>
+  <li>This page incorporates CRUD since it will allow users to edit what workouts they have done</li>
+</ul>
 
-- ISPE is a program for kids who are in individual sports and practice for 15+ hours a week and want middle/highschool credit for the PE (without taking the actual class)
-- This page allows students to keep track of the workouts they do for school and the grades they recieve.
-- It keeps students organized, motivated, and on track to get credit for the class.
+<p><br>
+<br></p>
 
-<br>
-<br>
+<h2 id="inspiration-page-ava">
+<a class="anchor" href="#inspiration-page-ava" aria-hidden="true"><span class="octicon octicon-link"></span></a>Inspiration Page (Ava)</h2>
+<blockquote>
+  <p>This page serves as a source of motivation for our users. Users can click on the Inspiration tab in our navigation bar and it will bring them to this page:</p>
+</blockquote>
 
-## Inspiration Page (Ava)
-&gt;This page serves as a source of motivation for our users. Users can click on the Inspiration tab in our navigation bar and it will bring them to this page:
+<p><img width="655" alt="inspobar" src="https://user-images.githubusercontent.com/111486111/214710937-dd6fdc88-3108-4a33-86a9-795c24f7fd5a.png">
+<img width="950" alt="quotes" src="https://user-images.githubusercontent.com/111486111/214710976-4abd2eec-de6a-4e3e-ac99-5c1be9a2114d.png"></p>
 
-<img width="655" alt="inspobar" src="https://user-images.githubusercontent.com/111486111/214710937-dd6fdc88-3108-4a33-86a9-795c24f7fd5a.png">
-<img width="950" alt="quotes" src="https://user-images.githubusercontent.com/111486111/214710976-4abd2eec-de6a-4e3e-ac99-5c1be9a2114d.png">
+<p>At the bottom of the page, users will see a button for motivation and a place to submit their own quotes:
+<img width="633" alt="inspoinputnew" src="https://user-images.githubusercontent.com/111486111/214711616-3c2e6fdb-f209-4679-8467-85c834198aaa.png"></p>
 
-At the bottom of the page, users will see a button for motivation and a place to submit their own quotes:
-<img width="633" alt="inspoinputnew" src="https://user-images.githubusercontent.com/111486111/214711616-3c2e6fdb-f209-4679-8467-85c834198aaa.png">
+<p>When clicked, the inspiration button will pop up with an inspirational quote:
+<img width="439" alt="alert" src="https://user-images.githubusercontent.com/111486111/214711182-d1495aca-8baf-45b7-b0bd-a19edef83ac2.png"></p>
 
-When clicked, the inspiration button will pop up with an inspirational quote:
-<img width="439" alt="alert" src="https://user-images.githubusercontent.com/111486111/214711182-d1495aca-8baf-45b7-b0bd-a19edef83ac2.png">
+<p>Users will be able to submit their own inspirational quotes that will appear in a table for all users to see.  Users will be able to edit or delete their responses.
+<img width="748" alt="inspotablenew" src="https://user-images.githubusercontent.com/111486111/214715621-816d92aa-98f6-4047-9ee7-38c5979defd4.png"></p>
 
-Users will be able to submit their own inspirational quotes that will appear in a table for all users to see.  Users will be able to edit or delete their responses.
-<img width="748" alt="inspotablenew" src="https://user-images.githubusercontent.com/111486111/214715621-816d92aa-98f6-4047-9ee7-38c5979defd4.png">
+<p><br>
+<br></p>
 
-<br>
-<br>
+<h2 id="our-challenges-ava">
+<a class="anchor" href="#our-challenges-ava" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our Challenges (Ava)</h2>
 
-## Our Challenges (Ava)
+<p>Past challenges:</p>
+<ol>
+  <li>Frontend:
+    <ul>
+      <li>Our team had little knowledge of CSS and styling, so we tried new things and went through trial and error until we ended up with our current website design.</li>
+    </ul>
+  </li>
+  <li>Backend:
+    <ul>
+      <li>Last week’s hacks were definitely a struggle when learning how to create a database for our user data and using an API to call that data from a browser.</li>
+    </ul>
+  </li>
+</ol>
 
+<p>Future Challenges:</p>
+<ol>
+  <li>Figuring out how to connect our frontend to our backend (with correct HTML5 tables)</li>
+  <li>preventing garbage data for all of our tables</li>
+  <li>figuring out how to successfully edit/delete responses from frontend</li>
+  <li>testing our data: making sure no garbage data,  correct errors returned for garbage, not all users get the same data (unless specified otherwise like for quotes)</li>
+</ol>
 
-Past challenges:
-1.  Frontend:
-- Our team had little knowledge of CSS and styling, so we tried new things and went through trial and error until we ended up with our current website design.
-2. Backend:
-- Last week's hacks were definitely a struggle when learning how to create a database for our user data and using an API to call that data from a browser.
+<p><br>
+<br></p>
 
-Future Challenges:
-1. Figuring out how to connect our frontend to our backend (with correct HTML5 tables)
-2. preventing garbage data for all of our tables
-3. figuring out how to successfully edit/delete responses from frontend
-4. testing our data: making sure no garbage data,  correct errors returned for garbage, not all users get the same data (unless specified otherwise like for quotes)
+<h2 id="admin-vs-user-access-alexa">
+<a class="anchor" href="#admin-vs-user-access-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Admin vs User Access (Alexa)</h2>
+<ul>
+  <li>Anyone who is an Admin (Ava, Alexa, Lydia, Sri, Nikhil) can acess all users and their inputs</li>
+  <li>Any user with a normal account will only be able to see/add/edit their own inputs on their pages</li>
+</ul>
 
-<br>
-<br>
+<p><br>
+<br></p>
 
-## Admin vs User Access (Alexa)
-- Anyone who is an Admin (Ava, Alexa, Lydia, Sri, Nikhil) can acess all users and their inputs
-- Any user with a normal account will only be able to see/add/edit their own inputs on their pages
+<h2 id="scrum-board-lydia">
+<a class="anchor" href="#scrum-board-lydia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scrum Board (Lydia)</h2>
 
-<br>
-<br>
+<p><img src="/TeamBaddies/images/ScrumBoardPresentation.png" alt="Scrum Board"></p>
 
-## Scrum Board (Lydia)
+<ul>
+  <li>This Scrum Board highlights and organizes our teams To Do List, our works “In Progress,” and tasks we’ve completed</li>
+  <li>We use this Scrum Board (+ issues within our scrum board) to keep track of the tasks, as well as communicate with team members as to what needs to be accomplished.</li>
+  <li>Allows for our project to be well planned and organized</li>
+</ul>
 
-![Scrum Board](/TeamBaddies/images/ScrumBoardPresentation.png)
+<p><br>
+<br></p>
 
-- This Scrum Board highlights and organizes our teams To Do List, our works "In Progress," and tasks we've completed
-- We use this Scrum Board (+ issues within our scrum board) to keep track of the tasks, as well as communicate with team members as to what needs to be accomplished. 
-- Allows for our project to be well planned and organized
+<h2 id="our-agile-manifesto-sri">
+<a class="anchor" href="#our-agile-manifesto-sri" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our Agile Manifesto (sri)</h2>
+<p><img src="/TeamBaddies/images/agilemanifesto.jpg" alt="Agile Manifesto"></p>
 
-<br>
-<br>
+<p><br>
+<br></p>
 
-## Our Agile Manifesto (sri)
-![Agile Manifesto](/TeamBaddies/images/agilemanifesto.jpg)
+<h2 id="incorporating-crud">
+<a class="anchor" href="#incorporating-crud" aria-hidden="true"><span class="octicon octicon-link"></span></a>Incorporating CRUD</h2>
+<ul>
+  <li>many features on this website will have the ability to recieve input</li>
+  <li>every table will have an edit/delete option so users can update/add/delete their data</li>
+</ul>
 
-<br>
-<br>
-
-## Goal/Timeline
-- weekly progress goals
-
-</body>
   </div><!-- from https://github.com/utterance/utterances -->
 <script src="https://utteranc.es/client.js"
         repo="SRIHITAKOTT1213/TeamBaddies"
