deploy: fc3c5d528e4f5f4ee85064b78b2a535be5eecfea

--- a/projectproposal/APCSA.html
+++ b/projectproposal/APCSA.html
@@ -134,7 +134,7 @@ window.onload = wrap_img;
 <a class="anchor" href="#their-presentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Their Presentation:</h2>
 <ul>
   <li>this group did a great job with their presentation</li>
-  <li>google slides?</li>
+  <li>used canva to present</li>
   <li>included wireframes/UMLs (submit button = frontend -&gt; backend)</li>
   <li>listed challenges</li>
   <li>showed a chart that showed level of acess (admin vs user)</li>
@@ -146,8 +146,10 @@ window.onload = wrap_img;
 <a class="anchor" href="#taking-into-account-for-our-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>Taking into Account for our Group:</h2>
 <ul>
   <li>details = everything!</li>
+  <li>^ for example, explain the exact purpose of every page (ex: ISPE page is to help kids keep track of their workouts/grades and to ensure they get the credit for the class)</li>
   <li>include lots of visuals</li>
-  <li>make a specific plan of how we are going to accomplish our project on time</li>
+  <li>for example, this team included visuals on their scrum board and process, so we can show our agile manifesto and scrum board</li>
+  <li>can make a specific plan of how we are going to accomplish our project on time</li>
 </ul>
 
 
