deploy: 6e143234f163a1c43fba8f1ee4faa7805f65bf96

--- a/projectproposal/TeamBaddies.html
+++ b/projectproposal/TeamBaddies.html
@@ -195,8 +195,12 @@ The registration portion asks you to enter a username of your choice, your email
 
 <h2 id="ispe-page-alexa">
 <a class="anchor" href="#ispe-page-alexa" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISPE page (Alexa)</h2>
-<p><img src="/TeamBaddies/images/ISPEmain.jpg" alt="ISPE Main">
-<img src="/TeamBaddies/images/ISPEgrades.jpg" alt="ISPE Grades"></p>
+<p><img src="/TeamBaddies/images/ISPEmain.jpg" alt="ISPE Main"></p>
+
+<p><br>
+<br></p>
+
+<p><img src="/TeamBaddies/images/ISPEgrades.jpg" alt="ISPE Grades"></p>
 <h2 id="what-is-ispe">
 <a class="anchor" href="#what-is-ispe" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is ISPE?</h2>
 <p><strong>I</strong>ndependent <br>
