--- a/projectproposal/APCSA.html
+++ b/projectproposal/APCSA.html
@@ -145,11 +145,26 @@ window.onload = wrap_img;
 <h2 id="taking-into-account-for-our-group">
 <a class="anchor" href="#taking-into-account-for-our-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>Taking into Account for our Group:</h2>
 <ul>
-  <li>details = everything!</li>
-  <li>^ for example, explain the exact purpose of every page (ex: ISPE page is to help kids keep track of their workouts/grades and to ensure they get the credit for the class)</li>
-  <li>include lots of visuals</li>
-  <li>for example, this team included visuals on their scrum board and process, so we can show our agile manifesto and scrum board</li>
-  <li>can make a specific plan of how we are going to accomplish our project on time</li>
+  <li>Presentation:
+    <ul>
+      <li>details = everything!</li>
+      <li>^ for example, explain the exact purpose of every page (ex: ISPE page is to help kids keep track of their workouts/grades and to ensure they get the credit for the class)</li>
+      <li>include lots of visuals (screenshots of everypage/feature)</li>
+      <li>for example, this team included visuals on their scrum board and process, so we can show our agile manifesto and scrum board</li>
+    </ul>
+  </li>
+  <li>Project:
+    <ul>
+      <li>can make a specific plan of how we are going to accomplish our project on time (assign roles)</li>
+      <li>include different access for different users
+        <ul>
+          <li>Rebecca’s project allows each club to have access to make edits to (only) their club. Also, ASB is able to edit all clubs on the website.</li>
+          <li>we want to make it so that users can only edit their own data. Also, we to have admin accounts (team baddies) that have access to all inputed data.</li>
+          <li>we’re planning on making the inso page data accesable to everyone (everyone can see all quotes and get inspired)</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
 </ul>
 
 
