deploy: 6bd324960c73c0057fae0fb8b85543dd85714910

--- a/projectproposal/memory.html
+++ b/projectproposal/memory.html
@@ -104,6 +104,7 @@ window.onload = wrap_img;
     <ul id="toc" class="section-nav">
 <li class="toc-entry toc-h2"><a href="#our-presentation-with-many-visuals">Our presentation (with many visuals!)</a>
 <ul>
+<li class="toc-entry toc-h3"><a href="#purpose-of-project-to-aid-users-in-keeping-track-of-their-fitness-and-keeping-their-motivationinspiration-high">Purpose of project: to aid users in keeping track of their fitness and keeping their motivation/inspiration high</a></li>
 <li class="toc-entry toc-h3"><a href="#our-cpt-features">Our CPT Features</a></li>
 <li class="toc-entry toc-h3"><a href="#our-scrum-board">Our Scrum Board</a></li>
 <li class="toc-entry toc-h3"><a href="#our-agile-manifesto">Our Agile Manifesto</a></li>
@@ -111,9 +112,16 @@ window.onload = wrap_img;
 <li class="toc-entry toc-h3"><a href="#our-challengesfuture-tasks">Our Challenges/Future Tasks:</a></li>
 </ul>
 </li>
-</ul><h2 id="our-presentation-with-many-visuals">
+</ul><p><br></p>
+
+<h2 id="our-presentation-with-many-visuals">
 <a class="anchor" href="#our-presentation-with-many-visuals" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://srihitakott1213.github.io/TeamBaddies/projectproposal/TeamBaddies">Our presentation (with many visuals!)</a>
 </h2>
+
+<p><br></p>
+
+<h3 id="purpose-of-project-to-aid-users-in-keeping-track-of-their-fitness-and-keeping-their-motivationinspiration-high">
+<a class="anchor" href="#purpose-of-project-to-aid-users-in-keeping-track-of-their-fitness-and-keeping-their-motivationinspiration-high" aria-hidden="true"><span class="octicon octicon-link"></span></a>Purpose of project: to aid users in keeping track of their fitness and keeping their motivation/inspiration high</h3>
 
 <p><br>
 <br></p>
